--- a/requirements.txt
+++ b/requirements.txt
@@ -1,261 +1,15 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-annotated-types==0.7.0
-ansicolors==1.1.8
-ansiwrap==0.8.4
-antlr4-python3-runtime==4.9.3
-anyio==4.4.0
-arrow==1.3.0
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==24.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blessed==1.20.0
-bokeh==3.6.2
-boto3==1.35.12
-botocore==1.35.12
-Brotli==1.0.9
-certifi==2024.7.4
-cffi==1.17.0
-chainmap==1.0.3
-charset-normalizer==3.3.2
-chex==0.1.86
-click==8.1.7
-cloudpickle==3.0.0
-cmake==3.31.2
-colorcet==3.1.0
-combomethod==1.0.12
-contourpy==1.3.0
-croniter==1.4.1
-cycler==0.12.1
-dask==2025.1.0
-datashader==0.16.3
-dateutils==0.6.12
-decorator==5.1.1
-deepdiff==7.0.1
-deepspeed==0.16.2
-dm_pix==0.4.3
-docker-pycreds==0.4.0
-docstring_parser==0.16
-editor==1.6.6
-einops==0.8.0
-etils==1.7.0
-exceptiongroup==1.2.2
-executing==2.0.1
-fastapi==0.112.2
-filelock==3.13.1
-flax==0.9.0
-fonttools==4.53.1
-frozenlist==1.4.1
-fsspec==2024.6.1
-ftfy==6.3.1
-gitdb==4.0.11
-GitPython==3.1.43
-glcontext==3.0.0
-glfw==1.12.0
-gmpy2==2.1.2
-gpustat==1.1.1
-grpcio==1.66.1
-gym==0.26.2
-gym-notices==0.0.8
-gym3==0.3.3
-h11==0.14.0
-hjson==3.1.0
-holoviews==1.20.0
-huggingface-hub==0.27.1
-humanize==4.10.0
-idna==3.7
-imageio==2.35.1
-imageio-ffmpeg==0.4.8
-importlib_metadata==8.6.1
-importlib_resources==6.4.4
-inquirer==3.4.0
-intspan==1.6.1
-ipython==8.27.0
-itsdangerous==2.2.0
-jax==0.4.31
-jax-cuda12-pjrt==0.4.31
-jax-cuda12-plugin==0.4.31
-jaxlib==0.4.31
-jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-jsonargparse==4.32.1
-kiwisolver==1.4.5
-kmeans-pytorch==0.3
-kornia==0.7.4
-kornia_rs==0.1.8
-lazy_loader==0.4
-lightning==2.0.8
-lightning-cloud==0.5.70
-lightning-utilities==0.11.6
-linkify-it-py==2.0.3
-lit==18.1.8
-llvmlite==0.43.0
-locket==1.0.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mementos==1.3.1
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
-ml-dtypes==0.4.0
-moderngl==5.11.1
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.5
-multipledispatch==1.0.0
-mypy-extensions==1.0.0
-natsort==8.4.0
-nest-asyncio==1.6.0
-networkx==3.3
-ninja==1.11.1.3
-nulltype==2.3.1
-numba==0.60.0
-numpy==1.26.4
-numpy-quaternion==2024.0.3
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvcc-cu12==12.6.68
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-ml-py==12.560.30
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.68
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.1.105
-omegaconf==2.3.0
-open_clip_torch==2.30.0
-opencv-python==4.10.0.84
-opt-einsum==3.3.0
-optax==0.2.3
-options==1.4.10
-orbax-checkpoint==0.6.1
-ordered-set==4.1.0
-packaging==24.1
-pandas==2.2.3
-panel==1.6.0
-param==2.2.0
-parso==0.8.4
-partd==1.4.2
-pexpect==4.9.0
-pillow==10.4.0
-pip==24.2
-piq==0.8.0
-platformdirs==4.2.2
-procgen==0.10.7
-prompt_toolkit==3.0.47
-protobuf==5.28.0
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pycparser==2.22
-pyct==0.5.0
-pydantic==2.10.4
-pydantic_core==2.27.2
-Pygments==2.18.0
-PyJWT==2.9.0
-pynndescent==0.5.13
-pyparsing==3.1.4
-pyre-extensions==0.0.29
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-multipart==0.0.9
-pytorch-lightning==2.0.1
-pytz==2024.1
-pyviz_comms==3.0.4
-PyYAML==6.0.1
-readchar==4.2.0
-readline==6.2.4.1
-regex==2024.11.6
-requests==2.32.3
-rich==13.8.0
-rotary-embedding-torch==0.7.0
-runs==1.2.2
-s3transfer==0.10.2
-safetensors==0.5.1
-say==1.6.6
-scikit-image==0.25.0
-scikit-learn==1.6.1
-scipy==1.14.1
-seaborn==0.13.2
-sentry-sdk==2.13.0
-setproctitle==1.3.3
-setuptools==69.5.1
-shtab==1.7.1
-simplere==1.2.13
-six==1.12.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
-starlette==0.38.4
-starsessions==1.3.0
-sympy==1.13.2
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-tensorstore==0.1.64
-textdata==2.4.1
-textwrap3==0.9.2
-threadpoolctl==3.5.0
-tifffile==2025.1.10
-toolz==0.12.1
-torch==2.0.1
-torch-fidelity==0.3.0
-torchaudio==2.4.0
-torchmetrics==1.4.1
-torchvision==0.15.2
-tornado==6.4.2
+procgen>=0.10.7
 tqdm==4.66.5
-traitlets==5.14.3
+pytorch-lightning==2.0.1
+opencv-python==4.10.0.84
+transformers==4.19.1
 triton==2.0.0
-types-python-dateutil==2.9.0.20240821
-typeshed_client==2.7.0
-typing_extensions==4.12.2
-typing-inspect==0.9.0
-tyro==0.8.10
-tzdata==2025.1
-uc-micro-py==1.0.3
-umap-learn==0.5.7
-urllib3==2.2.2
-uvicorn==0.30.6
-wandb==0.17.8
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-Werkzeug==3.0.4
-wheel==0.43.0
-xarray==2025.1.1
-xformers==0.0.20
-xmod==1.8.1
-xyzservices==2025.1.0
-yarl==1.9.6
-zipp==3.20.1
+einops==0.8.0
+piq==0.8.0
+xformers>=0.0.20
+lightning==2.0.8
+kmeans-pytorch==0.3
+jsonargparse[signatures]>=4.17.0
+tensorboard==2.17.1
+tensorboardX==2.6.2.2
+deepspeed==0.10.1
