--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ jsonargparse[signatures]>=4.17.0
 tensorboard==2.17.1
 tensorboardX==2.6.2.2
 deepspeed==0.10.1
+natsort>=8.4.0
+omegaconf>=2.3.0
+safetensors==0.5.1
+kornia==0.7.4
+open-clip-torch>=2.20.0
+scipy==1.14.1
