--- a/worldmodel/configs/training/adaworld.yaml
+++ b/worldmodel/configs/training/adaworld.yaml
@@ -87,7 +87,7 @@ model:
             target: vwm.modules.encoders.modules.VideoPredictionEmbedderWithLAMEncoder
             params:
               lam_config:
-                target: external.lam.model.Genie
+                target: external.lam.model.LAM
                 params:
                   image_channels: 3
                   lam_model_dim: 1024
